WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274090
[Navigation] Fix finished promise being resolved at incorrect time
https://bugs.webkit.org/show_bug.cgi?id=274090
Summary
[Navigation] Fix finished promise being resolved at incorrect time
Patrick Griffis
Reported
2024-05-13 08:37:26 PDT
""
Attachments
Add attachment
proposed patch, testcase, etc.
Patrick Griffis
Comment 1
2024-05-13 08:38:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28475
Patrick Griffis
Comment 2
2024-05-13 08:40:07 PDT
***
Bug 273929
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2024-05-13 20:03:52 PDT
Committed
278732@main
(75e0b11ab668): <
https://commits.webkit.org/278732@main
> Reviewed commits have been landed. Closing PR #28475 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2024-05-13 20:04:18 PDT
<
rdar://problem/128038776
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug